# ngx_http_rate_limiter

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: lib.rs  storage.rs
src/storage/: memcached.rs  memory.rs  mod.rs  mysql.rs  postgresql.rs  redis.rs  sqlite.rs
tests/: integration_test.rs
