[package]
name = "ngx_http_rate_limiter"
version = "0.1.0"
edition = "2021"

[lib]
name = "ngx_http_rate_limiter"
crate-type = ["cdylib"]

[dependencies]
nginx_module = "0.1.4"
tokio = { version = "1.28", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
memcached-rs = "0.4"
mysql = "24.0"
tokio-postgres = "0.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
